publish blog post

--- a/src/content/blog/blog-post-checklist.mdx
+++ b/src/content/blog/blog-post-checklist.mdx
@@ -11,7 +11,7 @@ authorLi: https://www.linkedin.com/in/suzza/
 authorBio: The writer with the mathematical muse.
 authorUrl: /authors/suzza-silver
 description: Tick items off this blog post checklist before you write. These ten items help you focus your attention on what matters most for your audience. It will put you in the right headspace for authoring that next article.
-draft: true
+draft: false
 categories: planning-and-productivity
 tldrOne: |
   It is difficult to sit down and draft your first blog post.
